--- a/src/main/resources/assets/rifts/lang/en_us.lang
+++ b/src/main/resources/assets/rifts/lang/en_us.lang
@@ -23,6 +23,17 @@ item.rifts:rift_transport_node.name=Rift Transport Node
 item.rifts:ender_link.name=Ender Link
 item.rifts:rift_eye.name=Rift's Eye
 item.rifts:fractured_pearl.name=Fractured Pearl
+item.rifts:rift_link.name=Rift Link
+item.rifts:adamanite_pickaxe.name=Adamanite Pickaxe
+item.rifts:adamanite_axe.name=Adamanite Axe
+item.rifts:adamanite_shovel.name=Adamanite Shovel
+item.rifts:adamanite_hoe.name=Adamanite Hoe
+item.rifts:adamanite_sword.name=Adamanite Sword
+item.rifts:adamanite_helmet.name=Adamanite Helmet
+item.rifts:adamanite_chestplate.name=Adamanite Chestplate
+item.rifts:adamanite_leggings.name=Adamanite Leggings
+item.rifts:adamanite_boots.name=Adamanite Boots
+item.rifts:adamanite_ingot.name=Adamanite Ingot
 
 tile.rifts:rift_flower.name=Rift Flower
 tile.rifts:amethyst_block.name=Amethyst Block
@@ -38,6 +49,18 @@ tile.rifts:barite_april_fools.name=Baconite
 tile.rifts:barite_april_fools_rough.name=Baconite
 tile.rifts:barite_april_fools_smooth.name=Polished Baconite
 tile.rifts:barite_april_fools_brick.name=Baconite Bricks
+tile.rifts:rift_connector.name=Rift Connector
+tile.rifts:teleporter.name=Teleporter
+tile.rifts:rift_rail.name=Rift Rail
+tile.rifts:adamanite_ore.name=Adamanite Ore
+tile.rifts:willow_log.name=Rift Willow Wood
+tile.rifts:willow_leaves.name=Rift Willow Leaves
+tile.rifts:willow_planks.name=Rift Willow Wood Planks
+tile.rifts:willow_planks_slab.name=Rift Willow Wood Slab
+tile.rifts:willow_stairs.name=Rift Willow Wood Stairs
+tile.rifts:willow_sapling.name=Rift Willow Sapling
+tile.rifts:willow_pressure_plate.name=Rift Willow Wood Pressure Plate
+tile.rifts:willow_button.name=Rift Willow Wood Button
 
 itemGroup.rifts:main=Rifts
 
@@ -55,6 +78,7 @@ misc.rifts:cleared_binding=Cleared binding.
 rift_category.rifts:primary_category.name=The Rift
 rift_category.rifts:rift_overworld.name=Overworld
 rift_category.rifts:rift_nether.name=Nether
+rift_category.rifts:rift_end.name=The End
 
 rift_entry.rifts:the_rift.name=The Rift Basics
 rift_entry.rifts:rift_decay.name=Rift Decay
@@ -63,14 +87,17 @@ rift_entry.rifts:amethyst.name=Amethyst
 rift_entry.rifts:opal.name=Opal
 rift_entry.rifts:rift_flower.name=Rift Flower
 rift_entry.rifts:nether_rift.name=The Nether Rift
+rift_entry.rifts:fractured_pearls.name=Fractured Pearls
+rift_entry.rifts:rift_transport_node.name=Rift Transport Node
+rift_entry.rifts:adamanite.name=Adamanite
 
 rift_page.rifts:rift_basics_0_0.name=The Rift fills the void between dimensions where distance is meaningless.
 rift_page.rifts:rift_basics_0_1.name=Various creatures use it to travel long distances very quickly, even between worlds.
 rift_page.rifts:rift_basics_0_2.name=A common example of this behavior is Endermen and Nether portals.
 rift_page.rifts:rift_basics_1_0.name=When you enter the rift you will find rare resources only available there in a "corrupted" version of the world you were last in.
-rift_page.rifts:rift_basics_1_1.name=But beware, the Rift is quite dangerous.  See next entry.
+rift_page.rifts:rift_basics_1_1.name=But beware, the Rift is quite dangerous.  See "Rift Decay".
 rift_page.rifts:rift_decay_0_0.name=If you haven't yet noticed, things aren't exactly the same in the Rift.  Some blocks are missing, some are completely different.
-rift_page.rifts:rift_decay_0_1.name=As you spend more time in the Rift, it will start to decay around you.
+rift_page.rifts:rift_decay_0_1.name=As you spend more time in the Rift, it will start to decay around you as the environment itself is extremely unstable.
 rift_page.rifts:rift_decay_0_2.name=I don't recommend spending too much time in the Rift.
 rift_page.rifts:amethyst_0_0.name=Amethyst is a very unique material.  It seems to attract ambient light, resulting in a darker area around it.
 rift_page.rifts:amethyst_0_1.name=Using it you can create a full block that removes light from a larger region around it, or a simple torch that affects a smaller area.
@@ -79,3 +106,8 @@ rift_page.rifts:barite_0_1.name=It can be crafted into smooth and brick variants
 rift_page.rifts:rift_flower_0_0.name=The strange flowers found in the Overworld rift seem to produce an unstable dye that could possibly be used as any other dye.
 rift_page.rifts:rift_flower_0_1.name=You may need to stabilize it with a sample of a stable dye, but then it can be used as many times as you would like.
 rift_page.rifts:nether_rift_0_0.name=Whereas the Nether is generally hostile environment full of hazards, the Rift from the Nether is relatively docile.
+rift_page.rifts:adamanite_0_0.name=Adamanite is a tough, durable material, that can be made into tools and armor, but otherwise seems relatively useless.
+rift_page.rifts:adamanite_0_1.name=Quite boring really.
+rift_page.rifts:rift_transport_node_0_0.name=This entry is a WIP.
+rift_page.rifts:fractured_pearls_0_0.name=Fractured Pearls can be used as a cheap and messy way to easily get access to the Rift.
+rift_page.rifts:fractured_pearls_0_1.name=By simply smashing an Ender Pearl it appears that the Rift energy inside can be accessed and used to make a temporary portal to the Rift.
